--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+	height: 100vh;
+	background-color: #b8c6db;
+background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+}
 .main{
     width: 60%;
     margin: auto;
