--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
 .nav{
     width: 80%;
     height: 60px;
-    color: black;
+    color: orangered;
     font-size: 15px;
     margin: auto;
 }
