--- a/style.css
+++ b/style.css
@@ -22,13 +22,25 @@ background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
 
 .input{
     margin: auto;
-    padding: 10px;
+    padding: 20px;
 
 }
 #getin{
-    width: 70%;
-    padding: 10px;
-    font-size: 15px;
+    width: 60%;
+	padding: 10px;
+	height: 30px;
+	font-size: 15px;
+	border-radius: 5px;
+	border: none;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black ;
+}
+#BTN{
+	height: 60px;
+	margin-left: 20px;
+	border-radius: 10px;
+	width: 100px;
+	border: none;
 }
 
 .uncompletedTaskList{
