--- a/style.css
+++ b/style.css
@@ -78,10 +78,14 @@ ol li{
 	width: 80%;
 	padding: 18px;
 	margin: auto;
-	background: #e96969bb;
 	font-size: 22px;
     counter-increment: my-counter;
-    text-align: left;
+	text-align: left;
+	border-radius: 10px;
+	background-color: #89d4cf;
+background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
+
+
 }
 ol.completeTaskList li{
     background: #00ff62;
